# andromeda-auto-videos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.override.yml.example  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/: auth.py  ffmpeg_pipeline.py  job_registry.py  main.py  queue_client.py  render_orchestrator.py  settings.py
api/tests/: conftest.py  test_endpoint.py  test_ffmpeg_pipeline.py  test_job_registry.py  test_models.py  test_orchestrator.py  test_settings.py
docs/superpowers/plans/: 2026-06-30-async-jobs-polling.md
docs/superpowers/specs/: 2026-06-30-async-jobs-polling-design.md
shared/: models.py
worker/: Dockerfile  pyproject.toml
worker/src/: callback.py  drive_client.py  ffmpeg_runner.py  job_runner.py  logging_setup.py  settings.py  worker.py
worker/tests/: conftest.py  test_ffmpeg_runner.py
