[project]
name = "render-api"
version = "0.1.0"
description = "Andromeda render-service — FastAPI front door that enqueues render jobs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "redis>=5.1,<6.0",
    "rq>=1.16,<2.0",
    "structlog>=24.4,<26.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "../shared/.."]
testpaths = ["tests"]
